--- a/Front-end/src/style.css
+++ b/Front-end/src/style.css
@@ -135,6 +135,7 @@ main{
 
 .text-tarefa{
     margin: 10px;
+    font-family: 'Edu TAS Beginner', cursive;
 }
 
 .text-light{
@@ -143,6 +144,13 @@ main{
 
 .tarefas{
     padding: 10px;
+    margin-top: 2px;
+    font-size: 15pt;
+    font-family: cursive;
+}
+
+.tarefasLight{
+    color: black;
 }
 
 
@@ -203,6 +211,10 @@ background-color: #002545;
 }
 
 .text-dark{
+    color: white;
+}
+
+.tarefasDark{
     color: white;
 }
 
