--- a/Front-end/src/style.css
+++ b/Front-end/src/style.css
@@ -145,15 +145,144 @@ main{
 .tarefas{
     padding: 10px;
     margin-top: 2px;
-    font-size: 15pt;
-    font-family: cursive;
+    font-size: 13pt;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: normal;
 }
 
 .tarefasLight{
     color: black;
 }
 
+.header-adicionarTarefa{
+    display: flex;
+    justify-content: center;
+    margin-top: 80px;
+}
+.header-adicionarTarefa > h2{
+    font-family: 'Edu TAS Beginner', cursive;
+    font-size: 28pt;
+}
 
+.body-adicionarTarefas{
+    height: 50px;
+    margin-top: 10px;
+    display: flex;
+    gap: 40px;
+    justify-content: center;
+}
+
+.select-dia{
+    position: relative;
+    overflow: hidden;
+}
+.select-dia select {
+    text-align: center;
+    width: 100%;
+    height: 90%;
+    margin: 0;
+    padding: 3px;
+    border: 2px solid black;
+    border-radius: 30px;
+    outline: none;
+    background: transparent;
+    appearance: none;
+  }
+.body-adicionarTarefas > input{
+    border-radius: 20px;
+    border: 2px solid black;
+    height: 30px;
+    padding: 5px;
+}
+
+.custom-btn {
+    width: 60px;
+    height: 40px;
+    color: #eee;
+    border-radius: 5px;
+    padding: 10px 25px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 500;
+    background: transparent;
+    cursor: pointer;
+    transition: all 300ms ease;
+    position: relative;
+    display: inline-block;
+     box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+     7px 7px 20px 0px rgba(0,0,0,.1),
+     4px 4px 5px 0px rgba(0,0,0,.1);
+    outline: none;
+  }
+  
+  .btn-3 {
+    background:var(--darkblue);
+  background: var(--darkblue);
+    width: 70px;
+    height: 40px;
+    line-height: 42px;
+    padding: 0;
+    border: none;
+    
+  }
+  .btn-3 span {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  .btn-3:before,
+  .btn-3:after {
+    position: absolute;
+    content: "";
+    right: 0;
+    top: 0;
+     background: var(--darkblue);
+    transition: all 0.3s ease;
+  }
+  .btn-3:before {
+    height: 0%;
+    width: 2px;
+  }
+  .btn-3:after {
+    width: 0%;
+    height: 2px;
+  }
+  .btn-3:hover{
+     background: transparent;
+    box-shadow: none;
+  }
+  .btn-3:hover:before {
+    height: 100%;
+  }
+  .btn-3:hover:after {
+    width: 100%;
+  }
+  .btn-3 span:hover{
+     color: var(--darkblue);
+  }
+  .btn-3 span:before,
+  .btn-3 span:after {
+    position: absolute;
+    content: "";
+    left: 0;
+    bottom: 0;
+     background: var(--darkblue);
+    transition: all 0.3s ease;
+  }
+  .btn-3 span:before {
+    width: 2px;
+    height: 0%;
+  }
+  .btn-3 span:after {
+    width: 0%;
+    height: 2px;
+  }
+  .btn-3 span:hover:before {
+    height: 100%;
+  }
+  .btn-3 span:hover:after {
+    width: 100%;
+  }
 /* ----------------------------------------- */
         /* DARK MODE */
 
